<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseInfoActivity">

    <LinearLayout
        android:id="@+id/taskbar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle_card_science">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="5dp">
            <ImageView
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_weight="0.14"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/back"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_weight="0.14"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/home"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp">

            <RelativeLayout
                android:id="@+id/relativelayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/picture"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="0dp"
                    android:layout_gravity="center"
                    android:src="@drawable/pic_science"
                    android:background="@drawable/background"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/courseName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Computer Science"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Schools In The Faculty Of Science"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp">

                </TextView>

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/rounded2_rectangle_card_science">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_height="match_parent"
                        android:text="Information about module"
                        android:textSize="16sp"
                        android:textColor="#fff"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="50dp"/>

                    <ImageView
                        android:id="@+id/dropdown_science"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="match_parent"
                        android:src="@drawable/down"
                        android:padding="4dp"
                        android:layout_gravity="center"
                        android:visibility="visible"/>
                    <ImageView
                        android:id="@+id/up_science"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="match_parent"
                        android:src="@drawable/up"
                        android:padding="4dp"
                        android:layout_gravity="center"
                        android:visibility="gone"/>



                </LinearLayout>


            </LinearLayout>

            <ScrollView
                android:id="@+id/science_pages"
                android:layout_width="match_parent"
                android:layout_height="2001dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/page_1"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:src="@drawable/page_2"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:src="@drawable/page_3"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:src="@drawable/page_4"/>

                </LinearLayout>


            </ScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/rounded2_rectangle_card_commerce">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_height="match_parent"
                        android:text="Pre-requisite of module"
                        android:textSize="16sp"
                        android:textColor="#fff"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="50dp"/>

                    <ImageView
                        android:id="@+id/dropdown_commerce"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="match_parent"
                        android:src="@drawable/down"
                        android:padding="4dp"
                        android:layout_gravity="center"
                        android:visibility="visible"/>

                    <ImageView
                        android:id="@+id/up_commerce"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="match_parent"
                        android:src="@drawable/up"
                        android:padding="4dp"
                        android:layout_gravity="center"
                        android:visibility="gone"/>


                </LinearLayout>

            </LinearLayout>



                <LinearLayout
                    android:id="@+id/commerce_pages"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ListView
                        android:id="@+id/pre_listview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        ></ListView>


                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/rounded2_rectangle_card_engineering">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_height="match_parent"
                        android:text="Co-requisite of module"
                        android:textSize="17sp"
                        android:textColor="#fff"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="50dp"/>

                    <ImageView
                        android:id="@+id/dropdown_engineering"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.2"
                        android:padding="4dp"
                        android:src="@drawable/down"
                        android:visibility="visible"/>

                    <ImageView
                        android:id="@+id/up_engineering"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.2"
                        android:padding="4dp"
                        android:src="@drawable/up"
                        android:visibility="gone"/>


                </LinearLayout>

            </LinearLayout>


                <LinearLayout
                    android:id="@+id/engineering_pages"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ListView
                        android:id="@+id/co_listview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        ></ListView>

                </LinearLayout>




        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>