...
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/science"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="115dp"
        android:layout_marginBottom="50dp">

        <ListView
            android:id="@+id/yos1_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ></ListView>


    </LinearLayout>
...
